docs: 更新文档内容及格式
- 修正主题描述
- 修改QA文档
- 增加详细说明和入服审核制度
- 添加服务器试行服规及名词解释

--- a/docs/001.Mcoo/001.公告/002.QA.md
+++ b/docs/001.Mcoo/001.公告/002.QA.md
@@ -20,11 +20,21 @@ Q：服务器的版本是什么？是否添加了修改原版玩法的模组？
 
 A：服务器是基于`Fabric 1.21`的原版生存玩法，无添加任何直接修改原版玩法的模组，仅安装了一些不修改特性的优化模组。
 
+::: details 不准点我😡
+
+> 我埃及巴咋玩咋玩，你管我？
+>
+> 你觉得我们不是原版，那你就受着。 XD
+
+:::
+
 ---
 
 Q：服务器的 **玩法** 是什么？
 
-A：服里有人研究红石，有人设计建筑，还有人醉心于掏洞掏到天荒地老……服务器会定期发布一些【限时】与【长期】的任务，完成之后可以获得特定的 **徽章** 。服务器也会在部分节假日举行特定活动，发放纪念品等。简而言之，玩法很多很杂，或者说没有特定的玩法。你可以在这里做 任何你喜欢的事情，但是 **不熊服不炸服** ，所以就允许我造个新词吧，称呼我们服务器为 **甜品服** 。
+A：服里有人研究红石，有人设计建筑，还有人醉心于掏洞掏到天荒地老……服务器会定期发布一些【限时】与【长期】的任务，完成之后可以获得特定的 **徽章** 。服务器也会在部分节假日举行特定活动，发放纪念品等。简而言之，玩法很多很杂，或者说没有特定的玩法。你可以在这里做任何你喜欢的事情，但是 **不熊服不炸服** ，所以就允许我造个新词吧，称呼我们服务器为 **甜品服** 。
+
+>描述或许很抽象，所以服务器可能非常挑人，如果能对上电波，你会发现这简直是最好玩的服务器之一
 
 ---
 
