--- a/docs/001.Mcoo/001.公告/003.入服指南.md
+++ b/docs/001.Mcoo/001.公告/003.入服指南.md
@@ -82,10 +82,10 @@ Mcoo Servers 是一个基于 Minecraft Java版 的原版生存服务器，采用
 4. PlayerLastPlay
     - 详见 [plp插件百科](https://www.yuque.com/doublespirit121/mcoo/bkv98eazfng77wdu)
 
-## 服务器玩家生存可用的部分常用指令
-`/server <子服名>`                        切换服务器
+## 服务器生存服部分常用指令
+`/server <子服名>` 切换服务器,可按键盘左上角的`Tab`键自动补全子服的名称
 
-`/log <参数>`                                 获取对应参数
+`/log <参数>` 获取对应参数
 
 > **常用参数**
 >
@@ -94,14 +94,137 @@ Mcoo Servers 是一个基于 Minecraft Java版 的原版生存服务器，采用
 >
 
 ### 假人相关指令
-`/player <玩家名> spawn`             召唤假人
+`/player <假人ID> spawn` 召唤假人
 
-> **完整指令**：`/player <玩家名> spawn at <x> <y> <z> facing ~ ~ in <minecraft:overworld|minecraft:the_end|the_nether>`
+> **完整指令**：`/player <假人ID> spawn at <x> <y> <z> facing ~ ~ in <minecraft:overworld|minecraft:the_end|the_nether>`
 >
 
-`/player <玩家名> kill`               下线假人
+`/player <假人ID> kill` 下线假人
 
-`/player <玩家名> use`                 假人右键
+`/player <假人ID> use` 假人右键
 
-`/player <玩家名> attack`            假人左键
+`/player <假人ID> attack` 假人左键
 
+## 附件一：Mcoo 入服审核制度
+
+### 一、服务器概况：
+
+Mcoo（原GeDK）服务器是由玉衡梦工场（Alioth Dream Workshops）于2020年7月18日创立的服务器（以下简称Mcoo服务器），宗旨是以创造一个追求高质量高情绪价值的游戏乌托邦为追求，将建筑与红石等技术以及各种有趣玩法融入原版生存之中。Mcoo服务器为保证其自身的良性发展，寻求更多志同道合的朋友加入我们，共同为实现服务器的目标贡献出自己的一份力量。
+
+另外，我们希望玩家具备包括但不限于以下几种基本的原版技术生存素养：
+
+- 本服为共产制服务器，资源全员共享，但需具有一个人类基本的道德；
+- 能正确读懂并理解《中华人民共和国国家通用语言文字法》规定的中国标准通用语言和文字：普通话和规范汉字；
+- 能够比较熟练地使用鞘翅；
+- 具备或愿意接受原版技术生存的玩法。
+
+### 二、可申请玩家类型：
+喜欢原版生存的所有领域的技术性玩家；
+包括但不限于：原版生存、建筑、红石、PVP、原版小游戏等领域。
+### 三、入服审核：
+
+::: tip 审核流程概述
+从各种渠道了解到服务器 → 进群（Mcoo 咕咕集散中心）→ 了解审核制度 → 开始审核 → 查看服规及入服指南
+:::
+
+#### 方式一：自行申请入服审核
+
+**一审：**
+
+>*服务器目前已取消笔试一审，根据玩家情况考虑直接进入二审或三审，但保留试题，部分情况下仍使用试题审核*
+
+**二审：**
+
+服务器二审采用作品审核，玩家需要准备一个自己的作品，作品不讲求大小，小而美也可。
+
+- 作品范围：红石、建筑、或者其他可以在原版生存中实现的作品均可；
+- 投递形式：现场制作、视频链接、投影、存档或带图讲解；
+- 不会非常严格，主要用来检验成员的基本水平。
+
+**三审：**
+
+服务器三审采用面试的形式，加入服务器的语音频道，直接与管理或是服务器成员们交流。
+
+>*注：此环节没有任何主题、考题一类的东西，仅是简单聊聊*
+
+此外，从成员过审之日起7天内为观察期，7天后自动转化为正式成员，若后续违反服务器规定将依照服规进行调查，若确认情况属实将取消成员白名单资格
+#### 方式二：服内成员邀请审核
+
+由已经在服务器内的玩家邀请入服的成员由邀请者自行审核，
+
+但是一旦邀请进服的玩家违反规定没有冷却，直接取消白名单资格后再做调查。
+
+同时邀请玩家施行连坐，根据被邀请者的违规情况确认连带责任的大小，
+
+>*注：若邀请者主动向管理员报备自己邀请的成员疑似有违规或其他不符合服务器规定的行为，可酌情减少或不追究邀请者责任*
+
+## 附件二：Mcoo 服务器试行服规
+
+### 一、生存服：
+1. 禁止开启机器后不关机或不挂假人（使机器处于错误状态运行）下线；
+2. 损坏服务器内设备或建筑不修复也不及时上报的；
+3. 禁止恶意PVP给他人造成伤害的；
+4. 禁止未经允许释放大量或强破坏性生物（无论有意无意）；
+5. 禁止大量白嫖服务器不可量产资源，只出不进不补货（无论有意无意）；
+6. 禁止使用服务器或版本漏洞恶意刷物品资源；
+7. 末地工业区的机器之间建造时不要贴太近，防止加载渲染压力过大；
+8. 发现无法正常运行的机器及时告知，禁止肇事逃逸；
+9. 假人必须为bot+序号格式，序号不准过长（除此之外每人申请后可以获得一个专属假人）；
+10. 在未争取工程负责人同意时禁止参与工程建造；
+11. 不会使用的机器不要强行使用，可以在群里询问或者找会使用的人上线，若因不会用强行使用导致机器损坏同第二条处理。
+
+### 二、镜像服：
+1. 禁止开启机器后不关机或不挂假人（使机器处于错误状态运行）下线，仅允许测试；
+2. 禁止使用世吞全家桶（工程测试除外），空置域请使用`set`或`replace`（不建议使用`set`，卡顿较高；
+3. 禁止恶意炸图毁图；
+4. 禁止未经允许释放大量或强破坏性生物（无论有意无意）；
+5. 假人必须为bot+序号格式，序号不准过长；
+6. 未经允许不可随意改造他人机器/建筑，可以利用插件复制后研究。
+
+### 三、服务器群：
+1. 禁止刷屏，引战，带节奏，广告，宣传其他服务器*等无关内容；
+2. 禁止发送大量*与服务器无关信息（聊天移步聊天群）；
+3. 禁止讨论特殊话题，敏感话题；
+4. 禁止发送炸群消息；
+5. 禁止发送不明链接*；
+6. 语言攻击他人的、自称是XXX服务器然后又被人锤出是乱说胡说的将被处罚；
+7. 管理综合评判后认定的不合理行为将被处罚。
+
+### 四、其他注意事项：
+1. 服务器引入了活跃度列表，活跃度低于一定天数的玩家白名单将会失效，再次上线时需要找管理重新激活白名单（无需重新审核）
+2. 长期`不上线或被判定为消极游戏`（不论是否有意）的成员有概率被不定时清理
+3. 本服并非严格意义上的原版生存/生电服务器，定义为`甜品服`，禁止将本服的玩法与本服特有修改强行带入其他人/服务器
+
+::: details 点击查看名词解释
+
+1. **宣传其他服务器**：
+包括但不限于宣传商业服务器，公布任何IP，公然为其他服务器拉人，
+讨论其他【原版】【技术】【公益】服务器不受此名词限制；
+ 
+2. **大量**：
+大量的具体数量定义取决于物品稀有程度与库存数量；
+ 
+3. **不明链接**：
+一般指盗号链接，诈骗链接或其他讨论无关内容的链接，
+管理认为无关或有害的链接也接受此名词管控；
+
+4. **长期**：
+通常指一个季度（3个月）以上；
+
+5. **消极游戏**：
+指在服务器公共项目中被多次告知行为不当扔按照自己的行为方式我行我素的玩家，
+个人自己的玩法如造一些自己的小型装置或建筑、设计东西、泡在镜像服或其他做自己的事不受此名词限制；
+ 
+6. **甜品服**：
+服里有人研究红石，有人设计建筑，还有人醉心于掏洞掏到天荒地老……服务器玩法很多很杂，或者说没有特定的玩法，所以我们将这种玩法定义为甜品服，描述或许很抽象，所以服务器可能非常挑人，如果能对上电波，你会发现这简直是最好玩的服务器之一；
+
+7. **若违反上述规则具体问题具体分析**：
+- 情节轻微未造成损失给与警告
+- 情节较轻造成轻微损失小黑屋3天
+- 情节较重造成一定损失小黑屋10天
+- 情节严重造成较大损失小黑屋30天
+- 情节严重，重大过失给服务器带来负面影响直接除名
+
+同时根据认责态度进行细致划分，若大错不犯小错不断，问题反复，也可根据情况给予惩罚。
+
+:::
