feat(docs): 添加mermaid支持并优化文档内容
- 新增mermaid图表支持，添加相关依赖和样式配置
- 优化QA和入服指南文档内容，使其更加清晰简洁
- 在入服流程中添加mermaid流程图说明审核流程
- 更新服务器介绍和已启用特性列表

--- a/docs/001.Mcoo/001.公告/002.QA.md
+++ b/docs/001.Mcoo/001.公告/002.QA.md
@@ -16,15 +16,13 @@ sidebar: false                         # 禁用侧边栏
 
 ---
 
-Q：服务器的版本是什么？是否添加了修改原版玩法的模组？
+Q：服务器的版本是什么？
 
-A：服务器是基于`Fabric 1.21`的原版生存玩法，无添加任何直接修改原版玩法的模组，仅安装了一些不修改特性的优化模组。
+A：Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。同时，为游戏添加了优化模组与数据包。您可以使用 Minecraft 1.21 或 1.21.1 客户端加入游戏。
 
 ::: details 不准点我😡
 
-> 我埃及巴咋玩咋玩，你管我？
->
-> 你觉得我们不是原版，那你就受着。 XD
+> 我们是不是原版呢？看你自己的定义咯~ XD
 
 :::
 
@@ -52,7 +50,7 @@ A：主要是懒，用正版验证+白名单来防熊。白名单不难获取，
 
 Q：为什么非要加你们Q群，我又不认识你们。
 
-A：不加群我们也不知道谁要申请白名单是不是。而且服务器的任务都是在Q群与Q频道发布的，不加群的话也收不到这些消息了，错过了怎么办？
+A：不加群我们也不知道谁要申请白名单是不是。而且服务器的任务会在Q群进行通知的，不加群的话也收不到这些消息了，错过了怎么办？
 
 ---
 
