--- a/docs/001.Mcoo/001.公告/003.入服指南.md
+++ b/docs/001.Mcoo/001.公告/003.入服指南.md
@@ -18,14 +18,14 @@ sidebar: false                         # 禁用侧边栏
 **如果您需要查看本文的内容，那么说明，你即将或是已经成为 Mcoo 墨客小筑 大家庭的一份子了。所以，容许我提前说一句：欢迎您！我的朋友！**
 
 ## 服务器简介
-Mcoo Servers 是一个基于 Minecraft Java版 的原版生存服务器，采用 Fabric 1.21 驱动。您可以使用 Minecraft 1.21 或 1.21.1 客户端加入游戏。
+Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。您可以使用 Minecraft 1.21 或 1.21.1 客户端加入游戏。
 
 ## 服务器数据包
 服务器现已启用以下数据包：
 
-1. Xekr的懒人合成 lazy crafting v1.2.1
+1. lazy crafting v1.2.1
     - 跳过多步骤合成，一步到位，数量经过精确计算，用可堆叠的原料代替不可堆叠的原料让合成速度更高。
-2. 附魔金苹果可合成 Enchanted Golden Apple
+2. Enchanted Golden Apple
     - 添加附魔金苹果的有序合成配方
 3. Mcoo Coral v1
     - 添加珊瑚块的有序合成配方
@@ -33,7 +33,7 @@ Mcoo Servers 是一个基于 Minecraft Java版 的原版生存服务器，采用
     - 添加钻石的高炉烧炼配方，使钻石变为可再生资源
 5. Mcoo Dragon Breath v1
     - 添加了龙息的锻造配方
-6. Sit
+6. Sit Down
     - 抬头将视角抬至最高，双击 Shift 就可以随地坐下
 
 ## 服务器已启用的 Carpet 特性
@@ -124,8 +124,24 @@ Mcoo（原GeDK）服务器是由玉衡梦工场（Alioth Dream Workshops）于20
 ### 三、入服审核：
 
 ::: tip 审核流程概述
-从各种渠道了解到服务器 → 进群（Mcoo 咕咕集散中心）→ 了解审核制度 → 开始审核 → 查看服规及入服指南
+了解服务器 → 加入闲聊群 → 阅读入服指南 → 判断是否适应玩法 → 适应则申请审核 → 审核通过加入服务器 → 阅读置顶公告 → 欢迎加入
 :::
+
+```mermaid
+flowchart TD
+    A[通过官网了解到本服务器] --> B[加入服务器闲聊群]
+    C[直接加群了解到本服务器] --> D[阅读官网服务器问答、新人一站式入服指南等文章]
+    B --> D
+    D --> E{判断是否适应本服玩法}
+    E -->|否| F[退出群聊或留在闲聊群聊天均可]
+    E -->|是| G[向管理申请加入审核群<br/>准备按照官网公开流程审核]
+    G --> H{审核是否通过}
+    H -->|否| I[移出审核群]
+    I --> F
+    H -->|是| J[移出审核群<br/>加入Mcoo Servers]
+    J --> K[阅读服务器置顶公告]
+    K --> L[欢迎加入Mcoo Servers！]
+```
 
 #### 方式一：自行申请入服审核
 
