docs: 更新文档内容与样式，新增VitePress相关配置和功能
- 删除旧文档文件和二维码图片
- 更新公告和徽章掉落页面的置顶排序和标签
- 新增VitePress相关文档，包括常用指令、多级侧边栏、可折叠侧边栏、页脚编辑等
- 添加Mermaid图表组件和样式
- 实现链接卡片、代码块样式优化、主题色配置等功能
- 新增工具箱页面和各类工具链接
- 优化导航栏毛玻璃效果和H1标题颜色
- 添加最后编辑时间显示功能
- 实现谷歌分析和不蒜子统计集成
- 新增记号笔高亮效果和链接图标功能
- 更新团队页面和视频/音乐播放器嵌入方式

--- a/docs/001.Mcoo/001.公告/003.入服指南.md
+++ b/docs/001.Mcoo/001.公告/003.入服指南.md
@@ -2,13 +2,13 @@
 title: Mcoo Servers 新玩家一站式入服指南             # 文章标题
 date: 2026-02-08 17:84:00              # 创建日期
 permalink: /gonggao/003                # 固定链接
-titleTag:                          # 标题标签（推荐、精华等）
+titleTag: 新人必看                         # 标题标签（推荐、精华等）
 categories:                            # 分类
   - 公告
 tags:                                  # 标签
   - 入服指南
 top: true                              # 置顶到首页
-sticky: 4                              # 置顶排序（数字越大越靠前）
+sticky: 3                              # 置顶排序（数字越大越靠前）
 description: 
 coverImg: /cover/004.webp                # 封面图片
 sidebar: false                         # 禁用侧边栏
@@ -127,7 +127,7 @@ Mcoo（原GeDK）服务器是由玉衡梦工场（Alioth Dream Workshops）于20
 了解服务器 → 加入闲聊群 → 阅读入服指南 → 判断是否适应玩法 → 适应则申请审核 → 审核通过加入服务器 → 阅读置顶公告 → 欢迎加入
 :::
 
-```mermaid
+<Mermaid code="
 flowchart TD
     A[通过官网了解到本服务器] --> B[加入服务器闲聊群]
     C[直接加群了解到本服务器] --> D[阅读官网服务器问答、新人一站式入服指南等文章]
@@ -141,7 +141,7 @@ flowchart TD
     H -->|是| J[移出审核群<br/>加入Mcoo Servers]
     J --> K[阅读服务器置顶公告]
     K --> L[欢迎加入Mcoo Servers！]
-```
+" />
 
 #### 方式一：自行申请入服审核
 
