--- a/docs/@pages/团队介绍.md
+++ b/docs/@pages/团队介绍.md
@@ -6,86 +6,277 @@ article: false
 sidebar: false
 ---
 
-<script setup>
-import {
-  VPTeamPage,
-  VPTeamPageTitle,
-  VPTeamMembers,
-  VPTeamPageSection
-} from 'vitepress/theme'
+<script setup lang="ts">
+const inactiveDesc = "感谢你曾经为Mcoo注入的热情与力量。\n无论未来身在何处，这段共同的记忆将永存于此。\n期待未来的某一天，我们再度相遇。"
 
-const coreMembers = [
+const teamMembers = [
   {
-    avatar: 'https://www.github.com/GeminiAlpha-1.png',
     name: '双灵',
-    title: 'DoubleSpirit121',
+    avatar: '/mcoo/DoubleSpirit121.png',
+    title: '创始人 & 开发者',
+    role: 'admin' as const,
+    active: true,
     links: [
-      { icon: 'github', link: 'https://github.com/GeminiAlpha-1' },
-      {
-        icon: {
-          svg: '<svg t="1755621432320" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="10849" width="200" height="200"><path d="M204.288 63.488c-8.704 8.192-16.896 20.48-18.944 26.624-3.584 11.776 12.8 62.464 20.48 62.464S235.52 176.128 235.52 184.32c0 16.384-17.92 26.112-47.104 26.112-34.816 0-104.448 27.648-128.512 51.2-9.216 8.704-26.112 33.792-37.888 56.32L0 358.4v469.504l21.504 40.448c24.576 47.616 35.84 59.392 82.944 84.992l40.96 22.528h722.944l40.96-19.968c51.712-24.576 72.704-45.056 95.744-94.72l17.92-38.4v-231.424l0.512-231.424-17.92-36.352c-9.216-20.48-28.16-47.104-42.496-59.904-31.232-30.208-86.528-54.272-122.368-54.272-54.272 0-65.024-22.528-26.624-57.856 20.48-18.432 23.04-25.088 23.04-45.568 0-19.968-3.584-28.16-16.896-41.984-9.216-9.216-22.528-16.896-29.696-16.896-11.776 0-34.304 9.216-40.448 16.896-1.536 1.536-35.84 35.328-75.776 74.24l-73.216 71.168-83.456-0.512c-45.568 0-88.064-2.56-93.696-4.608-5.632-2.56-38.4-31.232-72.704-65.024C249.856 40.448 235.008 32.256 204.288 63.488z m652.8 262.656c5.12 0.512 19.968 9.216 31.744 20.48l21.504 19.968 1.536 217.088c1.024 197.12 0.512 218.112-8.704 236.032-14.336 27.136-34.816 40.448-65.536 41.984-14.336 0.512-173.568 0.512-353.28 0l-326.144-1.536-45.056-45.056V373.248l20.992-22.528c15.872-17.92 25.6-23.552 41.984-25.088 16.384-1.024 634.88-0.512 680.96 0.512z" fill="#FB7299" p-id="10850"></path><path d="M279.04 502.272c-20.48 22.016-20.992 25.088-20.992 66.56 0 39.936 1.024 44.544 17.92 64 29.184 33.28 55.808 32.256 84.48-2.56 11.264-12.8 12.8-22.016 13.312-64 0-47.104-0.512-48.64-19.968-68.096-27.136-27.648-47.616-26.112-74.752 4.096z m393.216-3.584c-18.944 18.944-19.968 20.992-19.968 69.12 0 47.616 0.512 49.664 18.432 67.072 24.576 23.552 35.84 26.624 58.368 13.824 29.184-16.896 39.936-43.52 36.864-90.624-2.56-35.328-4.608-41.984-22.016-59.904-25.088-25.6-45.568-25.6-71.68 0.512z" fill="#FB7299" p-id="10851"></path></svg>'
-        },
-        link: "https://space.bilibili.com/1323019347"
-      }
+      { platform: 'github' as const, url: 'https://github.com/GeminiAlpha-1' },
+      { platform: 'bilibili' as const, url: 'https://space.bilibili.com/1323019347' }
     ]
   },
   {
-    avatar: 'https://www.github.com/RSEGordon.png',
     name: '戈登',
-    title: 'RSEGordon',
+    avatar: '/mcoo/RSEGordon.png',
+    title: '维护者 & 管理者',
+    role: 'admin' as const,
+    active: true,
     links: [
-      { icon: 'github', link: 'https://github.com/RSEGordon' },
-      {
-        icon: {
-          svg: '<svg t="1755621432320" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="10849" width="200" height="200"><path d="M204.288 63.488c-8.704 8.192-16.896 20.48-18.944 26.624-3.584 11.776 12.8 62.464 20.48 62.464S235.52 176.128 235.52 184.32c0 16.384-17.92 26.112-47.104 26.112-34.816 0-104.448 27.648-128.512 51.2-9.216 8.704-26.112 33.792-37.888 56.32L0 358.4v469.504l21.504 40.448c24.576 47.616 35.84 59.392 82.944 84.992l40.96 22.528h722.944l40.96-19.968c51.712-24.576 72.704-45.056 95.744-94.72l17.92-38.4v-231.424l0.512-231.424-17.92-36.352c-9.216-20.48-28.16-47.104-42.496-59.904-31.232-30.208-86.528-54.272-122.368-54.272-54.272 0-65.024-22.528-26.624-57.856 20.48-18.432 23.04-25.088 23.04-45.568 0-19.968-3.584-28.16-16.896-41.984-9.216-9.216-22.528-16.896-29.696-16.896-11.776 0-34.304 9.216-40.448 16.896-1.536 1.536-35.84 35.328-75.776 74.24l-73.216 71.168-83.456-0.512c-45.568 0-88.064-2.56-93.696-4.608-5.632-2.56-38.4-31.232-72.704-65.024C249.856 40.448 235.008 32.256 204.288 63.488z m652.8 262.656c5.12 0.512 19.968 9.216 31.744 20.48l21.504 19.968 1.536 217.088c1.024 197.12 0.512 218.112-8.704 236.032-14.336 27.136-34.816 40.448-65.536 41.984-14.336 0.512-173.568 0.512-353.28 0l-326.144-1.536-45.056-45.056V373.248l20.992-22.528c15.872-17.92 25.6-23.552 41.984-25.088 16.384-1.024 634.88-0.512 680.96 0.512z" fill="#FB7299" p-id="10850"></path><path d="M279.04 502.272c-20.48 22.016-20.992 25.088-20.992 66.56 0 39.936 1.024 44.544 17.92 64 29.184 33.28 55.808 32.256 84.48-2.56 11.264-12.8 12.8-22.016 13.312-64 0-47.104-0.512-48.64-19.968-68.096-27.136-27.648-47.616-26.112-74.752 4.096z m393.216-3.584c-18.944 18.944-19.968 20.992-19.968 69.12 0 47.616 0.512 49.664 18.432 67.072 24.576 23.552 35.84 26.624 58.368 13.824 29.184-16.896 39.936-43.52 36.864-90.624-2.56-35.328-4.608-41.984-22.016-59.904-25.088-25.6-45.568-25.6-71.68 0.512z" fill="#FB7299" p-id="10851"></path></svg>'
-        },
-        link: "https://space.bilibili.com/339232775"
-      }
-    ]
-  }
-]
-
-const partners = [
-  {
-    avatar: 'https://www.github.com/qfwefccx.png',
-    name: '猫尾结',
-    title: '社区贡献者',
-    links: [
-      { icon: 'github', link: 'https://github.com/qfwefccx' }
+      { platform: 'github' as const, url: 'https://github.com/RSEGordon' },
+      { platform: 'bilibili' as const, url: 'https://space.bilibili.com/339232775' }
     ]
   },
   {
-    avatar: 'https://www.github.com/murraychou.png',
-    name: '筱莫',
-    title: '团队共建者',
+    name: '北极熊',
+    avatar: '/mcoo/RSDPolarbear.png',
+    title: '维护者 & 管理者',
+    role: 'admin' as const,
+    active: true,
     links: [
-      { icon: 'github', link: 'https://github.com/murraychou' }
+      { platform: 'github' as const, url: 'https://github.com/RSDPolarbear' },
+      { platform: 'bilibili' as const, url: 'https://space.bilibili.com/393256525' }
     ]
+  },
+  {
+    name: '筱莫',
+    avatar: '/mcoo/MurrayChou.png',
+    title: '开发者 & 维护者',
+    role: 'admin' as const,
+    active: true,
+    links: [
+      { platform: 'github' as const, url: 'https://github.com/murraychou' },
+      { platform: 'bilibili' as const, url: 'https://space.bilibili.com/98847823' }
+    ]
+  },
+  {
+    name: '沐栀',
+    avatar: '/mcoo/skyfrt.png',
+    title: '创始人 & 开发者',
+    role: 'admin' as const,
+    active: true,
+    links: [
+      { platform: 'github' as const, url: 'https://github.com/skyfrt' },
+      { platform: 'bilibili' as const, url: 'https://space.bilibili.com/86940873' }
+    ]
+  },
+  {
+    name: '樱花',
+    avatar: '/mcoo/SakuraYH.png',
+    title: 'SakuraYH',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '田园脆鸡堡',
+    avatar: '/mcoo/Brantley__.png',
+    title: 'Brantley__',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '山风',
+    avatar: '/mcoo/Y_Suzumiya.png',
+    title: 'Y_Suzumiya',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '辣条',
+    avatar: '/mcoo/latiaobushi.png',
+    title: 'latiaobushi',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '畅畅',
+    avatar: '/mcoo/Lu_Dan0526.png',
+    title: 'Lu_Dan0526',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: 'K神',
+    avatar: '/mcoo/kterna.png',
+    title: 'kterna',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '发明',
+    avatar: '/mcoo/chaojifaming.png',
+    title: 'chaojifaming',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: 'Hsun阳',
+    avatar: '/mcoo/Hsun_Yang.png',
+    title: 'Hsun_Yang',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '老念',
+    avatar: '/mcoo/Pigeon_Nian.png',
+    title: 'Pigeon_Nian',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: 'whisper',
+    avatar: '/mcoo/whisper_zzz.png',
+    title: 'whisper_zzz',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '肆柒',
+    avatar: '/mcoo/sIqI_101111.png',
+    title: 'sIqI_101111',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '酥软',
+    avatar: '/mcoo/Su_rua.png',
+    title: 'Su_rua',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: '老章鱼',
+    avatar: '/mcoo/Zeyo_Octopus.png',
+    title: 'Zeyo_Octopus',
+    role: 'member' as const,
+    active: true
+  },
+  {
+    name: 'Scary',
+    avatar: '/mcoo/10_01Scary.png',
+    title: '10_01Scary',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '虚空',
+    avatar: '/mcoo/In_life.png',
+    title: 'In_life',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '夕暮',
+    avatar: '/mcoo/AureoleIris.png',
+    title: 'AureoleIris',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '穗儿',
+    avatar: '/mcoo/MaoSui.png',
+    title: 'MaoSui',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '鲤鱼',
+    avatar: '/mcoo/DLYSY.png',
+    title: 'DLYSY',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '龙庄',
+    avatar: '/mcoo/Dinosaur_MC_zh.png',
+    title: 'Dinosaur_MC_zh',
+    role: 'member' as const,
+    active: false
+  },
+  {
+    name: '魔男',
+    avatar: '/mcoo/Tanng_0834.png',
+    title: 'Tanng_0834',
+    role: 'member' as const,
+    active: false
   }
 ]
 </script>
 
-<VPTeamPage>
-  <VPTeamPageTitle>
-    <template #title>Mcoo 墨客小筑</template>
-    <template #lead>
-      人活一世，草木一秋，开心即可，不必讨好。
-    </template>
-  </VPTeamPageTitle>
+<div class="team-container">
+  <div class="team-header">
+    <h1>Mcoo 墨客小筑</h1>
+    <p class="team-slogan">人活一世，草木一秋，开心即可，不必讨好。</p>
+  </div>
 
-  <VPTeamPageSection>
-    <template #title>核心成员</template>
-    <template #lead>主要维护者和开发者。</template>
-    <template #members>
-      <VPTeamMembers size="small" :members="coreMembers" />
-    </template>
-  </VPTeamPageSection>
+  <TeamMembers
+    title="核心成员"
+    description="主要开发者、维护者、管理者。"
+    :members="teamMembers.filter(m => m.role === 'admin' && m.active !== false)"
+  />
 
-  <VPTeamPageSection>
-    <template #title>团队共建者</template>
-    <template #lead>排名不分先后，感谢以下成员的贡献。</template>
-    <template #members>
-      <VPTeamMembers size="small" :members="partners" />
-    </template>
-  </VPTeamPageSection>
-</VPTeamPage>
+  <TeamMembers
+    title="团队成员"
+    description="排名不分先后，感谢以下成员为 Mcoo 做出的杰出贡献。"
+    :members="teamMembers.filter(m => m.role === 'member' && m.active !== false)"
+  />
+
+  <div v-if="teamMembers.some(m => m.active === false)" class="inactive-section">
+    <TeamMembers
+      title="曾任成员"
+      :description="inactiveDesc"
+      :members="teamMembers.filter(m => m.active === false)"
+    />
+  </div>
+</div>
+
+<style scoped>
+.team-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.team-header {
+  text-align: center;
+  margin-bottom: 60px;
+  padding: 40px 20px;
+  background: linear-gradient(135deg, var(--vp-c-brand-soft) 0%, var(--vp-c-bg-soft) 100%);
+  border-radius: 16px;
+}
+
+.team-header h1 {
+  font-size: 2.0rem;
+  font-weight: 700;
+  margin-bottom: 30px;
+  color: var(--vp-c-text-1);
+}
+
+.team-slogan {
+  font-size: 1.2rem;
+  color: var(--vp-c-text-2);
+  font-style: italic;
+}
+
+.inactive-section {
+  opacity: 0.7;
+  margin-top: 40px;
+  padding-top: 40px;
+  border-top: 1px dashed var(--vp-c-divider);
+}
+
+@media (max-width: 640px) {
+  .team-header h1 {
+    font-size: 1.8rem;
+  }
+
+  .team-slogan {
+    font-size: 1rem;
+  }
+}
+</style>
