docs: 更新团队页面文档和描述文本
修正团队页面文档中的格式问题并更新描述文本，添加更详细的组件功能说明

--- a/docs/002.开发/001.VitePress/027.更好用的团队页面.md
+++ b/docs/002.开发/001.VitePress/027.更好用的团队页面.md
@@ -6,7 +6,11 @@ categories:
   - 笔记
 tags:
   - VitePress
-description: 使用本地资源打造一个加载更快、维护更简便的团队介绍页面
+description: 本文详细介绍了如何开发一个更好用的 VitePress 团队页面组件。原生的 VPTeamMembers 组件存在两个痛点：GitHub 头像在国内网络环境下加载缓慢，以及添加链接图标需要编写大段 SVG 代码。通过使用本地资源文件、TypeScript 类型定义和 CSS 悬浮动效，我们开发了一个轻量级、易维护的 TeamMembers 组件。该组件支持灵活的成员管理、多种链接平台图标自动映射，并实现了管理员/普通成员和在职/离职成员的自动分类显示功能。 
+coverImg:
+author:
+  name: 我就是双灵
+  link: https://space.bilibili.com/1323019347
 ---
 
 ## 前言
