测试自动部署

--- a/docs/003.Minecraft/001.插件百科/002.【插件百科】MCDR - !!plp教程.md
+++ b/docs/003.Minecraft/001.插件百科/002.【插件百科】MCDR - !!plp教程.md
@@ -60,4 +60,4 @@ author:
 
 - 如果在`server/whitelist.json`中没有玩家信息的情况下打开`only_whitelist_player`选项，则无法保存任何玩家的统计时间。即使你的服务器并没有开启白名单。
 
-- 如果在之前未开启 `only_whitelist_player` 选项,已经存入了部分玩家信息，那么 `!!plp` 不会自动清除历史信息
+- 如果在之前未开启 `only_whitelist_player` 选项,已经存入了部分玩家信息，那么 `!!plp` 不会自动清除历史信息。
