docs: 更新支持的Minecraft客户端版本范围
将支持的Minecraft客户端版本从1.21或1.21.1更新为1.21 ~ 1.21.11，以反映服务器当前实际支持的版本范围

--- a/docs/001.Mcoo/001.公告/002.QA.md
+++ b/docs/001.Mcoo/001.公告/002.QA.md
@@ -18,7 +18,7 @@ sidebar: false                         # 禁用侧边栏
 
 Q：服务器的版本是什么？
 
-A：Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。同时，为游戏添加了优化模组与数据包。您可以使用 Minecraft 1.21 或 1.21.1 客户端加入游戏。
+A：Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。同时，为游戏添加了优化模组与数据包。您可以使用 Minecraft 1.21 ~ 1.21.11 客户端加入游戏。
 
 ::: details 不准点我😡
 
