--- a/docs/001.Mcoo/001.公告/003.入服指南.md
+++ b/docs/001.Mcoo/001.公告/003.入服指南.md
@@ -18,7 +18,7 @@ sidebar: false                         # 禁用侧边栏
 **如果您需要查看本文的内容，那么说明，你即将或是已经成为 Mcoo 墨客小筑 大家庭的一份子了。所以，容许我提前说一句：欢迎您！我的朋友！**
 
 ## 服务器简介
-Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。您可以使用 Minecraft 1.21 或 1.21.1 客户端加入游戏。
+Mcoo 墨客小筑 是一个基于 `Minecraft Java版` 的生存服务器，采用 `Fabric` 驱动。您可以使用 Minecraft 1.21 ~ 1.21.11 客户端加入游戏。
 
 ## 服务器数据包
 服务器现已启用以下数据包：
