docs: 更新文档内容与团队成员信息
- 添加新成员老王的头像文件
- 更新首页关于主题的说明
- 在团队成员列表中添加老王的信息

--- a/docs/@pages/团队介绍.md
+++ b/docs/@pages/团队介绍.md
@@ -157,6 +157,13 @@ const teamMembers = [
     active: true
   },
   {
+    name: '老王',
+    avatar: '/mcoo/Lirrum.png',
+    title: 'Lirrum',
+    role: 'member' as const,
+    active: true
+  },
+  {
     name: 'Scary',
     avatar: '/mcoo/10_01Scary.png',
     title: '10_01Scary',
