feat(components): 新增图片轮播、作者卡片和下载卡片组件
添加三个新组件：ImageGallery、AuthorCard和DownloadCard，用于增强文档展示效果。ImageGallery支持图片轮播和缩略图导航；AuthorCard展示作者信息，支持随机马卡龙色背景；DownloadCard提供美观的下载链接展示，支持动态按钮文字。同时更新相关文档和配置，注册新组件到VitePress主题中。

refactor(docs): 优化资源展示页布局和内容
移除冗余卡片组件，使用新组件重构资源展示页，提升用户体验和视觉效果。更新Markdown写作指南，添加新组件使用说明。

style(theme): 添加百度网盘和Gitee链接图标
新增自定义链接图标样式，为百度网盘和Gitee链接添加专属图标，提升链接辨识度。

--- a/docs/002.开发/004.Markdown/001.写作指导.md
+++ b/docs/002.开发/004.Markdown/001.写作指导.md
@@ -498,6 +498,41 @@ Markdown 支持直接嵌入 HTML 标签。
 - 自动播放：`bf="true"`
 - 关闭静音：`jy="false"`
 
+### 图片轮播
+
+使用 ImageGallery 组件可以展示图片轮播图：
+
+```md
+<ImageGallery :images="[
+  { src: '图片1地址.jpg', alt: '图片1' },
+  { src: '图片2地址.jpg', alt: '图片2' },
+  { src: '图片3地址.jpg', alt: '图片3' }
+]" />
+```
+
+**参数说明：**
+
+| 参数 | 说明 | 类型 |
+|------|------|------|
+| images | 图片数组 | array |
+| images[].src | 图片地址（支持本地路径和图链） | string |
+| images[].alt | 图片alt文本 | string |
+
+**效果展示：**
+
+<ImageGallery :images="[
+  { src: 'https://image.rseg.club/api/images/2026-02-19_13.11.40.png', alt: '图片1' },
+  { src: 'https://image.rseg.club/api/images/2026-02-17_01.10.09.png', alt: '图片2' },
+  { src: 'https://image.rseg.club/api/images/2026-02-22_01.12.47.png', alt: '图片3' }
+]" />
+
+**使用技巧：**
+
+- 支持本地图片和图链
+- 图片会自动缩放填满整个框（object-fit: cover）
+- 鼠标放到大图上显示左右箭头，点击切换
+- 底部缩略图显示，点击可复制图片链接
+
 ### 文本高亮
 
 使用 `<mark>` 标签或反引号让文本高亮。
