--- a/docs/@pages/资源展示.md
+++ b/docs/@pages/资源展示.md
@@ -9,38 +9,9 @@ sidebar: false
 <div class="resource-page">
 
 <div class="page-header">
-  <h1 class="gradient-title">Mcoo 墨客小筑 资源展示页</h1>
-  <p class="subtitle">点击卡片即可跳转到您想要的资源~</p>
+  <h1 class="gradient-title">Mcoo 墨客小筑 资源下载</h1>
+  <p class="subtitle">✨ 点击卡片即可跳转到您想要的资源 ✨</p>
 </div>
-
-# 分享卡片
-
-::: shareCard
-```yaml
-- name: George Chan
-  desc: 让我给你讲讲他的传奇故事吧
-  avatar: https://z3.ax1x.com/2021/09/30/4oKMVI.jpg
-  link: https://cyc0819.top/
-  bgColor: '#FFB6C1'
-  textColor: '#621529'
-
-- name: butcher2000
-  desc: 即使再小的帆，也能远航
-  avatar: https://gcore.jsdelivr.net/gh/Kele-Bingtang/static/user/20211029181901.png
-  link: https://blog.csdn.net/weixin_46827107
-  bgColor: '#CBEAFA'
-  textColor: '#6854A1'
-
-- name: Evan's blog
-  desc: 前端的小学生
-  avatar: https://gcore.jsdelivr.net/gh/xugaoyi/image_store@master/blog/20200103123203.jpg
-  link: https://xugaoyi.com/
-  bgColor: '#B9D59C'
-  textColor: '#3B551F'
-```
-:::
-
-# 图片卡片
 
 ::: imgCard
 ```yaml
@@ -66,25 +37,6 @@ sidebar: false
   link: https://vp.teek.top
   name: 标题
   desc: 描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容
-```
-:::
-
-# 导航卡片
-
-::: navCard
-```yaml
-- name: 百度
-  desc: 百度——全球最大的中文搜索引擎及最大的中文网站，全球领先的人工智能公司
-  link: http://www.baidu.com/
-  img: /icons/bilibili.svg
-  badge: 搜索引擎
-
-- name: Google
-  desc: 全球最大的搜索引擎公司
-  link: http://www.google.com/
-  img: /icons/bilibili.svg
-  badge: 搜索引擎
-  badgeType: tip
 ```
 :::
 
