feat(投稿系统): 实现自助投稿表单组件及页面
新增自助投稿表单组件SubmissionForm，包含以下功能：
- 作品信息收集与资源类型选择
- 作者信息收集与头像自动匹配
- 动态增删图片和下载链接
- 自动生成符合规范的Markdown文件
- 表单验证与错误处理

同时添加投稿页面路由和文档说明

--- a/docs/@pages/资源展示.md
+++ b/docs/@pages/资源展示.md
@@ -15,12 +15,12 @@ sidebar: false
 
 ::: imgCard
 ```yaml
-- img: /blog/bg1.webp
-  link: https://vp.teek.top
-  name: 标题
-  desc: 描述内容描述内容描述内容描述内容
-  author: 双灵
-  avatar: /blog/bg1.webp
+- img: https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.00.57.png
+  link: /mcdr/redstone/001
+  name: 伪随机竞马场
+  desc: 来自方块工程师杯比赛瑞士轮第三轮的赛博马场，快来和xdm来一场紧张刺激的赛马罢
+  author: 凉宫山风
+  avatar: /mcoo/Y_Suzumiya.png
 - img: /blog/bg2.webp
   link: https://vp.teek.top
   name: 标题
