--- a/docs/004.Mcoo Resource Download Site/001.红石/伪随机竞马场.md
+++ b/docs/004.Mcoo Resource Download Site/001.红石/伪随机竞马场.md
@@ -6,7 +6,7 @@ categories:
   - 资源
 tags:
   - 红石
-description: 
+description: 来自 方块工程师杯 比赛瑞士轮第四轮的赛博马场，快来和xdm来一场紧张刺激的赛马罢
 author:
   name: 凉宫山风
   link: https://space.bilibili.com/39934370
@@ -15,9 +15,10 @@ author:
 <BiliVideo bv="BV1yccMzmEB4" />
 
 <ImageGallery :images="[
-  { src: 'https://image.rseg.club/api/images/2026-02-19_13.11.40.png', alt: '图片1' },
-  { src: 'https://image.rseg.club/api/images/2026-02-17_01.10.09.png', alt: '图片2' },
-  { src: 'https://image.rseg.club/api/images/2026-02-22_01.12.47.png', alt: '图片3' }
+  { src: 'https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.00.57.png', alt: '图片1' },
+  { src: 'https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.02.34.png', alt: '图片2' },
+  { src: 'https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.03.09.png', alt: '图片3' },
+  { src: 'https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.03.25.png', alt: '图片4' },
 ]" />
 
 <AuthorCard 
@@ -28,12 +29,12 @@ author:
   license="CC BY-NC-SA 4.0" 
 >
   <template #description>
-    来自@方块工程师杯官方 比赛瑞士轮第四轮的赛博马场，快来和xdm来一场紧张刺激的赛马罢*<br><br>
+    来自@方块工程师杯官方 比赛瑞士轮第三轮的赛博马场，快来和xdm来一场紧张刺激的赛马罢*<br><br>
     感兴趣的兄弟们可以进群一起赤石awa~：927868234<br><br>
     ----------------------------<br><br>
      <a href="https://space.bilibili.com/3546579076122975/dynamic" target="_blank">方块工程师杯官方</a><br><br>
     ----------------------------<br><br>
-    Mcoo服务器基于 Fabric 1.21 的原版生存玩法运行，仅使用不改变原版机制的优化模组，保证纯净体验。玩法自由，可进行建筑、红石、或原版生存；服务器为共产制，会不定期发布任务与节日活动，完成后可获得不影响平衡的纪念徽章。采用正版验证 + 白名单防熊，日常管理克制，不干扰正常游戏，整体氛围轻松友好，是一台偏长期游玩的原版「甜品服」。<br><br>
+    Mcoo服务器基于 Fabric 1.21 的生存玩法运行，仅使用不改变原版机制的优化模组，保证纯净体验。玩法自由，可进行建筑、红石、或原版生存；服务器为共产制，会不定期发布任务与节日活动，完成后可获得不影响平衡的纪念徽章。采用正版验证 + 白名单防熊，日常管理克制，不干扰正常游戏，整体氛围轻松友好，是一台偏长期游玩的原版「甜品服」。<br><br>
     ----------------------------<br><br>
     转载请遵循：署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0)，请保留原文链接及作者
   </template>
