docs(资源下载): 更新自动切歌唱片机文档并添加新资源
- 更新自动切歌唱片机的图片链接和下载选项
- 添加前中期简单好用的600k刷石机文档
- 添加生存小物件一站化解决方案文档
- 更新资源展示页面的卡片布局和内容

--- a/docs/004.Mcoo Resource Download Site/001.红石/自动切歌唱片机.md
+++ b/docs/004.Mcoo Resource Download Site/001.红石/自动切歌唱片机.md
@@ -1,7 +1,7 @@
 ---
 title: 自动切歌唱片机
 date: 2026-01-24 20:50:22
-permalink: 
+permalink: /mcdr/redstone/002
 categories:
   - 资源
 tags:
@@ -15,8 +15,9 @@ author:
 <BiliVideo bv="BV1aezkBqEen" />
 
 <ImageGallery :images="[
-  { src: 'https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.00.57.png', alt: '图片1' },
-  { src: 'https://image.rseg.club/api/images/2026-02-22_01.12.47.png', alt: '图片2' },
+  { src: 'https://image.rseg.club/api/images/%E8%87%AA%E5%8A%A9%E5%88%87%E6%AD%8C%E5%94%B1%E7%89%87%E6%9C%BA/2026-02-23_15.29.05.png', alt: '图片1' },
+  { src: 'https://image.rseg.club/api/images/%E8%87%AA%E5%8A%A9%E5%88%87%E6%AD%8C%E5%94%B1%E7%89%87%E6%9C%BA/2026-02-23_15.29.22.png', alt: '图片2' },
+  { src: 'https://image.rseg.club/api/images/%E8%87%AA%E5%8A%A9%E5%88%87%E6%AD%8C%E5%94%B1%E7%89%87%E6%9C%BA/2026-02-23_15.29.15.png', alt: '图片3' }
 ]" />
 
 <AuthorCard 
@@ -36,5 +37,8 @@ author:
 ## 作品下载
 
 <DownloadCard :downloads="[
-  { name: '百度网盘', url: 'https://pan.baidu.com/s/1nvBCxHh8ysMYG0eTHWLH-w?pwd=MCOO', description: '提取码：MCOO' },
+  { name: 'Github', url: 'https://github.com/McooServers/MRDS/releases/download/%E6%88%88%E7%99%BBV1/default.zip', description: '官方下载地址，国内用户可能需要开启代理' },
+  { name: 'Github 加速', url: 'https://gh-proxy.org/https://github.com/McooServers/MRDS/releases/download/%E6%88%88%E7%99%BBV1/default.zip', description: '使用 Gh Proxy 加速下载，若链接挂掉请联系管理员' },
+  { name: '百度网盘', url: 'https://pan.baidu.com/s/13t3ezgkTZRF2j8U9ePwIwg?pwd=qCQf', description: '提取码：qCQf' },
+  { name: 'Mcoo 大型咕咕集散中心', url: 'https://qm.qq.com/q/oeJmXdPF8m', description: '加入 QQ 群下载资源，同时可以在群内交流与反馈问题' }
 ]" />
