--- a/docs/@pages/资源展示.md
+++ b/docs/@pages/资源展示.md
@@ -10,33 +10,35 @@ sidebar: false
 
 <div class="page-header">
   <h1 class="gradient-title">Mcoo 墨客小筑 资源下载</h1>
-  <p class="subtitle">✨ 点击卡片即可跳转到您想要的资源 ✨</p>
+  <p class="subtitle">点击卡片即可跳转到您想要的资源</p>
 </div>
 
 ::: imgCard
 ```yaml
+- img: https://image.rseg.club/api/images/%E7%94%9F%E5%AD%98%E5%B0%8F%E7%89%A9%E4%BB%B6%E4%B8%80%E7%AB%99%E5%8C%96%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88/2026-02-23_15.40.28.png
+  link: /mcdr/redstone/003
+  name: 生存小物件一站化解决方案
+  desc: 来自方块工程师杯官方比赛八强决赛，题目【生存实用】。这里是你们的北极熊呀，好久不见捏，也是久违的搓了一个视频。是山风老师的比赛作品，也是我的一次blender练手，雀实还得练，blender还得适应，以前完全没接触过，八小时现学制作，大佬们轻喷。BGM：Will of the People...
+  author: 凉宫山风 Y_Suzumiya
+  avatar: /mcoo/Y_Suzumiya.png
 - img: https://image.rseg.club/api/images/%E4%BC%AA%E9%9A%8F%E6%9C%BA%E7%AB%9E%E9%A9%AC%E5%9C%BA/2026-02-23_14.00.57.png
   link: /mcdr/redstone/001
   name: 伪随机竞马场
   desc: 来自方块工程师杯比赛瑞士轮第三轮的赛博马场，快来和xdm来一场紧张刺激的赛马罢
-  author: 凉宫山风
+  author: 凉宫山风 Y_Suzumiya
   avatar: /mcoo/Y_Suzumiya.png
-- img: /blog/bg2.webp
-  link: https://vp.teek.top
-  name: 标题
-  desc: 描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容
-  author: 戈登
-  avatar: https://testingcf.jsdelivr.net/gh/Kele-Bingtang/static/user/avatar1.png
-- img: /blog/bg3.webp
-  link: https://vp.teek.top
-  name: 标题
-  desc: 描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容
-  author: 小熊
-  avatar: https://testingcf.jsdelivr.net/gh/Kele-Bingtang/static/user/avatar1.png
-- img: /blog/bg4.webp
-  link: https://vp.teek.top
-  name: 标题
-  desc: 描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容描述内容
+- img: https://image.rseg.club/api/images/%E8%87%AA%E5%8A%A9%E5%88%87%E6%AD%8C%E5%94%B1%E7%89%87%E6%9C%BA/2026-02-23_15.29.05.png
+  link: /mcdr/redstone/002
+  name: 自动切歌唱片机
+  desc: 闲着无聊搓的一个小东西awa，可以当作一些机器和建筑（如全物品）里面的小挂件用来放歌~
+  author: 戈登 RSEGordon
+  avatar: /mcoo/RSEGordon.png
+- img: https://image.rseg.club/api/images/%E5%89%8D%E4%B8%AD%E6%9C%9F%E7%AE%80%E5%8D%95%E5%A5%BD%E7%94%A8%E7%9A%84600k%E5%88%B7%E7%9F%B3%E6%9C%BA/2026-02-23_16.01.01.png
+  link: /mcdr/redstone/004
+  name: 前中期简单好用的600k刷石机
+  desc: 方块工程师杯瑞士轮晚19点场作品.jpg 看大伙都那么想要，就做了收集和开关光速端上来力awa
+  author: 凉宫山风 Y_Suzumiya
+  avatar: /mcoo/Y_Suzumiya.png
 ```
 :::
 
